Unit test cases added