@@ -1,32 +1,20 @@
 package com.example.studentDetailsBackEnd.Controller;
 
 import com.example.studentDetailsBackEnd.DTO.TechnicalDetailRequest;
-import com.example.studentDetailsBackEnd.Model.TechnicalDetail;
-import com.example.studentDetailsBackEnd.Model.EventCategory;
-import com.example.studentDetailsBackEnd.Model.Student;
-import com.example.studentDetailsBackEnd.Model.Faculty;
-import com.example.studentDetailsBackEnd.Model.TechnicalEvents;
-import com.example.studentDetailsBackEnd.Model.Request;
-import com.example.studentDetailsBackEnd.repository.RequestRepository;
+import com.example.studentDetailsBackEnd.Model.*;
 import com.example.studentDetailsBackEnd.Service.TechnicalDetailService;
-import com.example.studentDetailsBackEnd.repository.EventCategoryRepository;
-import com.example.studentDetailsBackEnd.repository.TechnicalEventsRepository;
-import com.example.studentDetailsBackEnd.repository.TechnicalDetailRepository;
-import com.example.studentDetailsBackEnd.repository.StudentRepository;
-import com.example.studentDetailsBackEnd.repository.TableDetailsRepository;
+import com.example.studentDetailsBackEnd.repository.*;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.io.IOException;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import java.io.IOException;
-import java.time.format.DateTimeFormatter;
-import java.time.LocalDate;
 
 @CrossOrigin(origins = "http://localhost:5173", allowCredentials = "true")
 @RestController
@@ -35,33 +23,30 @@ public class TechnicalDetailController {
 
     private final TechnicalDetailService technicalDetailService;
     private final TechnicalDetailRepository technicalDetailRepository;
-    
-    @Autowired
-    private TechnicalEventsRepository technicalEventsRepository;
+    private final TechnicalEventsRepository technicalEventsRepository;
+    private final EventCategoryRepository eventCategoryRepository;
+    private final StudentRepository studentRepository;
+    private final TableDetailsRepository tableDetailsRepository;
+    private final RequestRepository requestRepository;
 
-    @Autowired
-    private EventCategoryRepository eventCategoryRepository;
-
-    @Autowired
-    private StudentRepository studentRepository; 
-
-    @Autowired
-    private TableDetailsRepository tableDetailsRepository;
-
-    @Autowired
-    private RequestRepository requestRepository;
-
-    @Autowired
-    public TechnicalDetailController(TechnicalDetailService technicalDetailService, 
-                                     TechnicalDetailRepository technicalDetailRepository) {
+    public TechnicalDetailController(TechnicalDetailService technicalDetailService,
+                                     TechnicalDetailRepository technicalDetailRepository,
+                                     TechnicalEventsRepository technicalEventsRepository,
+                                     EventCategoryRepository eventCategoryRepository,
+                                     StudentRepository studentRepository,
+                                     TableDetailsRepository tableDetailsRepository,
+                                     RequestRepository requestRepository) {
         this.technicalDetailService = technicalDetailService;
-        this.technicalDetailRepository = technicalDetailRepository; 
+        this.technicalDetailRepository = technicalDetailRepository;
+        this.technicalEventsRepository = technicalEventsRepository;
+        this.eventCategoryRepository = eventCategoryRepository;
+        this.studentRepository = studentRepository;
+        this.tableDetailsRepository = tableDetailsRepository;
+        this.requestRepository = requestRepository;
     }
-    
-    @PostMapping("/add")
-    public ResponseEntity<?> addTechnicalDetail(@ModelAttribute TechnicalDetailRequest request) {  // Changed from @RequestBody to @ModelAttribute
-        System.out.println("Received student ID: " + request.getStudentID());
 
+    @PostMapping("/add")
+    public ResponseEntity<?> addTechnicalDetail(@ModelAttribute TechnicalDetailRequest request) {
         if (request.getStudentID() == 0) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Invalid student ID received!");
         }
@@ -109,10 +94,10 @@ public class TechnicalDetailController {
         int entryID = savedDetail.getTechnicalDetailID();
 
         Optional<Integer> tableIDOpt = Optional.ofNullable(tableDetailsRepository.findByTableName("technical_event_details"))
-                .map(table -> table.getTableID());
+                .map(TableDetails::getTableID);
 
         if (tableIDOpt.isEmpty()) {
-            return ResponseEntity.status(500).body("Table entry for technical_details not found.");
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Table entry for technical_details not found.");
         }
 
         int tableID = tableIDOpt.get();
@@ -120,7 +105,7 @@ public class TechnicalDetailController {
         Request newRequest = new Request();
         newRequest.setStudent(student);
         newRequest.setFaculty(faculty);
-        newRequest.setTableDetails(tableDetailsRepository.findById(tableID).get());
+        newRequest.setTableDetails(tableDetailsRepository.findById(tableID).orElse(null));
         newRequest.setEntryID(entryID);
         newRequest.setStatus("PENDING");
 
@@ -131,7 +116,7 @@ public class TechnicalDetailController {
 
     @GetMapping("/{id}/file")
     public ResponseEntity<byte[]> getFile(@PathVariable int id) {
-        Optional<TechnicalDetail> detailOpt = technicalDetailRepository.findById(id);  // Fixed static reference
+        Optional<TechnicalDetail> detailOpt = technicalDetailRepository.findById(id);
         if (detailOpt.isEmpty() || detailOpt.get().getOfferLetter() == null) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
         }
@@ -141,7 +126,6 @@ public class TechnicalDetailController {
                 .header("Content-Disposition", "attachment; filename=\"offer_letter.pdf\"")
                 .body(detailOpt.get().getOfferLetter());
     }
-
 
     @GetMapping("/all")
     public ResponseEntity<List<TechnicalDetail>> getAllTechnicalDetails() {
@@ -157,21 +141,24 @@ public class TechnicalDetailController {
     @GetMapping("/event-names")
     public ResponseEntity<List<Map<String, Object>>> getEventNames() {
         List<Map<String, Object>> events = technicalEventsRepository.findAll()
-            .stream()
-            .map(event -> Map.of("eventID", event.getEventID(), "name", event.getName()))
-            .toList();
-        
+                .stream()
+                .map(event -> Map.of(
+                        "eventID", event.getEventID(),
+                        "name", event.getName()))
+                .collect(Collectors.toList());
+
         return ResponseEntity.ok(events);
     }
 
     @GetMapping("/event-categories")
     public ResponseEntity<List<Map<String, Object>>> getEventCategories() {
         List<Map<String, Object>> categories = eventCategoryRepository.findAll()
-            .stream()
-            .map(category -> Map.of("eventCategoryID", category.getEventCategoryID(), "eventCategoryName", category.getEventCategoryName()))
-            .toList();
-        
+                .stream()
+                .map(category -> Map.of(
+                        "eventCategoryID", category.getEventCategoryID(),
+                        "eventCategoryName", category.getEventCategoryName()))
+                .collect(Collectors.toList());
+
         return ResponseEntity.ok(categories);
     }
-
 }
